--- a/configure.ac
+++ b/configure.ac
@@ -427,6 +427,7 @@ AC_OUTPUT(Makefile \
 	doc/opcontrol.1 \
 	doc/ophelp.1 \
 	doc/op-check-perfevents.1 \
+	doc/oprof_start.1 \
 	doc/opreport.1 \
 	doc/opannotate.1 \
 	doc/opgprof.1 \
