Add various utility routines needed by new ocount tool
Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,7 @@ SUBDIRS = \
 	gui \
 	libperf_events \
 	pe_profiling \
+	libpe_utils \
 	agents
 #### ATTENTION ####
 #    The agents directory must be kept as the last subdir
