New ocount tool and associated ocount_counter classes
This patch implements the executable 'ocount' tool, as
well as some classes used for opening and managing the
"perf_events" file descriptors (opened via perf_event_open).

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/configure.ac
+++ b/configure.ac
@@ -399,6 +399,7 @@ OP_DOCDIR=`eval echo "${my_op_prefix}/share/doc/$PACKAGE/"`
 AC_SUBST(OP_DOCDIR)
 
 AC_OUTPUT(Makefile \
+	pe_counting/Makefile \
 	libpe_utils/Makefile \
 	pe_profiling/Makefile \
 	libperf_events/Makefile \
