--- a/Makefile.am
+++ b/Makefile.am
@@ -22,6 +22,7 @@ SUBDIRS = \
 	libperf_events \
 	pe_profiling \
 	libpe_utils \
+	pe_counting \
 	agents
 #### ATTENTION ####
 #    The agents directory must be kept as the last subdir
