Post-review fixups for new ocount feature
This patch fixes the issues raised during the review of the
'ocount' tool.  Some of the issues were raised on the
oprofile-list, and some were raised internally by users
within my company. The issues raised internally were:
  - Bug: Compile failure with recent gcc
  - Request to display total time events were being counted in long output
  - Bug: Counting multiple events in a run mode other than 'command  [args]'
    can result in incorrect output.  For example:
      ocount -s -e CPU_CLK_UNHALTED,UNHALTED_REFERENCE_CYCLES
      Event counts (scaled) for the whole system:
      Event              Count          % time enabled
      CPU_CLK_UNHALTED   291,912,262    100.00
      CPU_CLK_UNHALTED   27,431,626     100.00
  - Bug: On ppc64 systems, event spec returned by _handle_powerpc_event_spec
    may contain extra garbage after the event name.
  - Request to change the --time-interval option to show counts just for
    the interval, not cumulative counts

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/doc/ocount.1.in
+++ b/doc/ocount.1.in
@@ -162,10 +162,10 @@ to display event counts on a per-cpu basis.  Without this option, all counts are
 .br
 
 .TP
-.BI "--time-intervals / -i " num_seconds[:num_intervals]
-Cumulative results are printed every
+.BI "--time-interval / -i " num_seconds[:num_intervals]
+Results collected for each time interval are printed every
 .IR "num_seconds"
-instead of the default of one dump of event counts at the end of the run.
+instead of the default of one dump of cumulative event counts at the end of the run.
 If
 .I num_intervals
 is specified,
@@ -183,10 +183,10 @@ Use this option to print results in the following brief format:
 .P
 .RS
 If
-.I --timer-intervals
+.I --timer-interval
 is specified, a separate line formatted as
 .br
-    t:<num_seconds_since_epoch>
+    timestamp,<num_seconds_since_epoch>
 .br
 is printed ahead of each dump of event counts.
 .RE
