Converge operf and ocount utility functions
When the ocount tool was developed, a number of utility
functions were needed that were very similar to operf utility
functions, with just minor changes.  The decision was made at
the time to copy these functions into ocount and change them
as needed.  To avoid dual maintenance on very similar functions,
we should converge the two tools to use one common set of utility
functions. The main reason for not doing so in the first place
was to make it easier to review ocount patches and not have to
look at operf changes at the same time.

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/pe_profiling/Makefile.am
+++ b/pe_profiling/Makefile.am
@@ -6,6 +6,7 @@ AM_CPPFLAGS = \
 	-I ${top_srcdir}/libop \
 	-I ${top_srcdir}/libutil++ \
 	-I ${top_srcdir}/libperf_events \
+	-I ${top_srcdir}/libpe_utils \
 	@PERF_EVENT_FLAGS@ \
 	@OP_CPPFLAGS@
 
@@ -15,7 +16,8 @@ AM_CXXFLAGS = @OP_CXXFLAGS@
 AM_LDFLAGS = @OP_LDFLAGS@
 
 bin_PROGRAMS = operf
-operf_LDADD =	../libperf_events/libperf_events.a \
+operf_LDADD = ../libperf_events/libperf_events.a \
+	../libpe_utils/libpe_utils.a \
 	../libutil++/libutil++.a \
 	../libdb/libodb.a \
 	../libop/libop.a \
