Ocount, print the unit mask, kernel and user modes if specified for the event
The unit mask, kernel and user mode can all be optionally specified by the user.
Currently, these values are not being printed with the event name and the
counts for the events.  This patch will print this information only if
the user specifies one or more of these qualifiers with the event specifier.

Signed-off-by: Carl Love <carll@us.ibm.com>

--- a/doc/ocount.1.in
+++ b/doc/ocount.1.in
@@ -177,9 +177,17 @@ exits after the specified number of intervals occur.
 .BI "--brief-format / -b"
 Use this option to print results in the following brief format:
 .br
-    [optional cpu or thread,]<event_name>,<count>,<percent_time_enabled>
+    [cpu or thread,]<event_name>[:umask[:K:U]],<count>,<percent_time_enabled>
 .br
-    [        <int>         ,]<  string  >,< u64 >,<     double         >
+    [    <u32>    ,]<  string  >[< u32>[<bb>]],<  u64 >,<     double        >
+
+The umask,
+.BR K ernel
+and
+.BR U ser
+modes are only printed if the values were specified as part of the event.
+The 'K' and 'U' fields are binary fields separated by colons, where the value for each binary
+field may be either '0' or '1'.
 .P
 .RS
 If
