ophelp schema is not included in installed files
A one-line change in doc/Makefile.am was needed in order for
'make install' to put ophelp.xsd in <installdir>/share/doc/oprofile.

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -26,7 +26,7 @@ man_MANS += operf.1 \
 endif
 
 htmldir = $(prefix)/share/doc/oprofile
-dist_html_DATA = oprofile.html internals.html opreport.xsd op-jit-devel.html
+dist_html_DATA = oprofile.html internals.html opreport.xsd ophelp.xsd op-jit-devel.html
 
 if have_xsltproc
 
