--- a/doc/ocount.1.in
+++ b/doc/ocount.1.in
@@ -119,6 +119,21 @@ output). For some named unit masks, the hex value is not unique; thus, OProfile
 tools enforce specifying such unit masks value by name.
 If no unit mask is specified, the default unit mask value for the event is used.
 .P
+The
+.I kernel
+and
+.I user
+parts of the event specification are binary values ('1' or '0') indicating
+whether or not to count events in kernel space and user space.
+.br
+.B Note:
+In order to specify the
+.I kernel/user
+bits, you must also specify a
+.I unitmask
+value, even if the running processor type does not use unit masks \(em
+in which case, use the value '0' to signify a null unit mask.
+.P
 Event names for certain processor types include a
 .I "_GRP<n>"
 suffix.  For such cases, the
@@ -179,7 +194,7 @@ Use this option to print results in the following brief format:
 .br
     [cpu or thread,]<event_name>[:umask[:K:U]],<count>,<percent_time_enabled>
 .br
-    [    <u32>    ,]<  string  >[< u32>[<bb>]],<  u64 >,<     double        >
+    [    <u32>    ,]<  string  >[< u32>[<bb>]],< u64 >,<       double       >
 
 The umask,
 .BR K ernel
