Fix two makefiles to use -Werror, and fix resulting compiler errors
I discovered that the Makefile.am files in libperf_events and
libpe_utils did not set AM_CXXFLAGS = @OP_CXXFLAGS@, and thus,
the extra -W flags that are added to OP_CXXFLAGS (in configure.ac)
were not being used when building these two directories. Once
I corrected this problem with the makefiles and rebuilt the
source tree, the g++ compiler found a number of minor issues
and ended in error due to the -Werror flag. This patch contains
fixes for the two Makefile.am files, as well as fixes for the
compiler's warnings-turned-to-errors. These were all minor issues
that I'm fairly confident should not have caused any functional
problems.  Both manual testing and oprofile testsuite pass
with this patch applied.

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/libpe_utils/Makefile.am
+++ b/libpe_utils/Makefile.am
@@ -9,6 +9,8 @@ AM_CPPFLAGS = \
 	@PERF_EVENT_FLAGS@ \
 	@OP_CPPFLAGS@
 
+AM_CXXFLAGS = @OP_CXXFLAGS@
+
 noinst_LIBRARIES = libpe_utils.a
 libpe_utils_a_SOURCES =  \
 	op_pe_utils.h \
