Fix ocount man page and usage regarding counting modes
The ocount tool must be run with one and only one of the following
counting modes:
	o system-wide
	o process-list
	o thread-list
	o cpu-list
	o command [args]

The ocount man page and usage printout was missing the logical OR
separator ('|') between cpu-list and command modes.  This patch
fixes that.

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/doc/ocount.1.in
+++ b/doc/ocount.1.in
@@ -9,7 +9,7 @@ ocount \- Event counting tool for Linux
 [
 .I options
 ]
-[ --system-wide | --process-list <pids> | --thread-list <tids> | --cpu-list <cpus> [ command [ args ] ] ]
+[ --system-wide | --process-list <pids> | --thread-list <tids> | --cpu-list <cpus> | [ command [ args ] ] ]
 
 .SH DESCRIPTION
 .BI ocount
