Add minimal (armv7-common) support for ARMv7 Krait
Just common ARM PMU events are supported with this patch due
to lack of available documentation.

Other developers reports that operf also works nice.
Tested on device and using "make distcheck".
Signed-off-by: Leonid Moiseichuk <l.moiseichuk@samsung.com>

--- a/events/Makefile.am
+++ b/events/Makefile.am
@@ -53,6 +53,7 @@ event_files = \
 	arm/armv7/events arm/armv7/unit_masks \
 	arm/armv7-scorpion/events arm/armv7-scorpion/unit_masks \
 	arm/armv7-scorpionmp/events arm/armv7-scorpionmp/unit_masks \
+	arm/armv7-krait/events arm/armv7-krait/unit_masks \
 	arm/armv7-ca9/events arm/armv7-ca9/unit_masks \
 	arm/armv7-ca5/events arm/armv7-ca5/unit_masks \
 	arm/armv7-ca7/events arm/armv7-ca7/unit_masks \
