Enhance ocount to support millisecond time intervals
The ocount tool currently has a --time-interval option that
allows users to print a snapshot of event counts every n seconds,
where 'n' is an integer value equal to or greater than 1.
A user requested a change to allow time intervals of 100 ms.
The user stated that he uses an event counting tool on a
non-Linux operating system, and that tool had the option of
collecting counts every 100 ms. Now, he wanted the same ability
on Linux so he could do direct comparison of data. The
original choice of one second granularity for the time interval
option was arbitrary, so the request (based on a real world
use case) seemed reasonable.

This patch changes ocount's '--time-interval' option to accept
values in units of milliseconds instead of seconds. At this
time, the implementation supports only 100 ms granularity, so
time intervals passed will be rounded to the nearest 100 ms.

NOTE: Current users of ocount who make use of the '--time-interval'
option will see a change in behavior. I don't believe this is
a serious compatibility issue since the timestamp printed along
with the event counts makes it very clear what the actual
time interval is, and the user can check the ocount man page
for clarification.

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/doc/ocount.1.in
+++ b/doc/ocount.1.in
@@ -184,16 +184,26 @@ to display event counts on a per-cpu basis.  Without this option, all counts are
 .br
 
 .TP
-.BI "--time-interval / -i " num_seconds[:num_intervals]
-Results collected for each time interval are printed every
-.IR "num_seconds"
+.BI "--time-interval / -i " interval_length[:num_intervals]
+
+.B Note:
+The
+.I "interval_length"
+is given in milliseconds. However, the current implementation only supports
+100 ms granularity, so the given
+.I "interval_length"
+will be rounded to the nearest 100 ms.
+Results collected for each time interval are printed immediately
 instead of the default of one dump of cumulative event counts at the end of the run.
-Counters are reset to zero at the start of each interval. If
+Counters are reset to zero at the start of each interval.
+.P
+.RS
+If
 .I num_intervals
 is specified,
 .BI ocount
 exits after the specified number of intervals occur.
-.br
+.RE
 
 .TP
 .BI "--brief-format / -b"
@@ -216,9 +226,10 @@ If
 .I --timer-interval
 is specified, a separate line formatted as
 .br
-    timestamp,<num_seconds_since_epoch>
+    timestamp,<num_seconds_since_epoch>[.n]
 .br
-is printed ahead of each dump of event counts.
+is printed ahead of each dump of event counts. If the time interval specified is
+less than one second, the timestamp will have 1/10 second precision.
 .RE
 
 .TP
