Remove opreport warnings for /no-vmlinux, [vdso], [hypervisor_bucket] not found
When running opreport -l, the following warning messages may appear:

warning: /no-vmlinux could not be found.
warning: [vdso] (tgid:31882 range:0x7fff249ae000-0x7fff249aefff) could not be found.
warning: [hypervisor_bucket] (tgid:24654 range:0x994-0x17a09c0) could not be found

For the '/no-vmlinux' case, it's not a real file -- it's just a bucket
we use to assign kernel samples to.  For the '[vdso]' case, this reflects
samples in the vDSO (virtual dynamic shared object), which is a small shared
library that the kernel automatically maps into the address space of all
user-space applications.  The '[hypervisor_bucket]' message can happen
on virtualized systems with a hypervisor (e.g., PowerVM) because there is
no physical binary file to attribute hypervisor samples to.

The warnings are annoying and unnecessary, so they are removed via this
patch. This patch also adds a description of "no-vmlinux" to the operf man
page.  And for '[vdso]', users can easily google for a description.

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/doc/operf.1.in
+++ b/doc/operf.1.in
@@ -87,7 +87,7 @@ directory should be /root or a subdirectory of /root to avoid
 storing sample data files in locations accessible by regular users.
 .br
 .TP
-.BI "--vmlinux / k " vmlinux_path
+.BI "--vmlinux / -k " vmlinux_path
 .RS
 A vmlinux file that matches the running kernel that has symbol and/or debuginfo.
 Kernel samples will be attributed to this binary, allowing post-processing tools
@@ -96,6 +96,12 @@ Kernel samples will be attributed to this binary, allowing post-processing tools
 The kernel symbol information may be obtained from /proc/kallsyms if
 the user does not specify a vmlinux file.  The symbol addresses are given
 in /proc/kallsyms if permitted by the setting of /proc/sys/kernel/kptr_restrict.
+.P
+If the
+.I --vmlinux
+option is not used and kernel symbols cannot be obtained from /proc/kallsyms,
+then all kernel samples are attributed to "no-vmlinux", which is simply
+a bucket to hold the samples and not an actual file.
 .RE
 .TP
 .BI "--events / -e " event1[,event2[,...]]
