Link ocount with librt for clock_gettime only when needed
With GLIBC 2.17, the clock_* functions were moved from librt
to libc. The ocount tool uses clock_gettime. This patch adds
a configure check to determine whether or not to link with
"-lrt".

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/configure.ac
+++ b/configure.ac
@@ -395,6 +395,12 @@ AM_CONDITIONAL(CHECK_ACCOUNT, test "x$enable_account_check" = "xyes")
 AC_SUBST(OP_CFLAGS)
 AC_SUBST(OP_CXXFLAGS)
 
+AC_CHECK_FUNC(clock_gettime, [], [
+	AC_CHECK_LIB(rt, clock_gettime, RT_LIB="-lrt",
+		AC_MSG_ERROR(Unable to find clock_gettime function; required by ocount))])
+AC_SUBST(RT_LIB)
+
+
 # fixups for config.h
 if test "$prefix" = "NONE"; then
 	my_op_prefix="$ac_default_prefix"
