--- a/libpp/Makefile.am
+++ b/libpp/Makefile.am
@@ -52,7 +52,5 @@ libpp_a_SOURCES = \
 	symbol_sort.cpp \
 	symbol_sort.h \
 	xml_utils.h \
-	xml_utils.cpp \
-	populate_for_spu.cpp \
-	populate_for_spu.h
+	xml_utils.cpp
 
